Fix whitespace

--- a/styles/index.css
+++ b/styles/index.css
@@ -185,9 +185,8 @@ textarea {
  * MS High Contrast - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/-ms-high-contrast
  */
 
-@media screen and (-ms-high-contrast: active) {
-  /* All high contrast styling rules */
-}
+@media screen and (-ms-high-contrast: active)
+  { /* All high contrast styling rules */ }
 @media screen and (-ms-high-contrast: black-on-white) {}
 @media screen and (-ms-high-contrast: white-on-black) {}
 
